--- a/desktop/src/main/resources/org/example/desktop/cambiar-password-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/cambiar-password-view.fxml
@@ -2,82 +2,124 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1"
-            xmlns="http://javafx.com/javafx/17.0.12"
-            fx:controller="org.example.desktop.controller.PasswordController"
-            prefWidth="700.0" prefHeight="500.0"
-            stylesheets="@estilos/login-register.css">
+<StackPane stylesheets="@estilos/login-register.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.PasswordController">
 
-    <top>
-        <HBox alignment="TOP_LEFT">
-            <padding>
-                <Insets top="15" right="15" bottom="10" left="15" />
-            </padding>
-            <Button fx:id="btnVolver" text="← Volver"
-                    styleClass="primary-button"
-                    onAction="#volver"
-                    mnemonicParsing="false" />
-        </HBox>
-    </top>
+    <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+          prefHeight="500.0" prefWidth="700.0"
+          styleClass="login-register-container">
 
-    <center>
-        <VBox alignment="CENTER" spacing="25" styleClass="right-panel"
-              prefHeight="500.0" prefWidth="400.0">
+        <VBox alignment="CENTER" prefHeight="500.0" prefWidth="300.0"
+              styleClass="login-register-left-panel" spacing="20">
             <padding>
-                <Insets top="50.0" right="40.0" bottom="50.0" left="40.0" />
+                <Insets bottom="40.0" left="30.0" right="30.0" top="40.0"/>
             </padding>
 
-            <Label text="Cambiar contraseña" styleClass="form-title" />
+            <VBox alignment="CENTER" spacing="15" styleClass="login-register-logo-container">
+                <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true"
+                           styleClass="login-register-logo-image">
+                    <image>
+                        <Image url="@images/siaj-logo.png"/>
+                    </image>
+                </ImageView>
 
-            <VBox spacing="20" maxWidth="320.0">
+                <Label alignment="CENTER" styleClass="login-register-brand-title"
+                       text="SIAJ INVENTARIOS" wrapText="true"/>
+                <Label alignment="CENTER" styleClass="login-register-brand-subtitle"
+                       text="Sistema de gestión inteligente" wrapText="true"/>
+            </VBox>
+
+            <Region VBox.vgrow="ALWAYS"/>
+
+            <VBox alignment="CENTER" spacing="15" styleClass="login-register-register-section">
+                <Label alignment="CENTER" styleClass="login-register-register-text"
+                       text="¿Necesitas ayuda?" wrapText="true"/>
+                <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="180.0"
+                        styleClass="login-register-register-button" text="Contactar soporte"/>
+            </VBox>
+        </VBox>
+
+        <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0"
+              styleClass="login-register-right-panel" spacing="25">
+            <padding>
+                <Insets bottom="50.0" left="40.0" right="40.0" top="50.0"/>
+            </padding>
+
+            <VBox alignment="CENTER" spacing="15" styleClass="login-register-form-header">
+                <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"
+                           styleClass="login-register-form-logo">
+                    <image>
+                        <Image url="@images/siaj-logo.png"/>
+                    </image>
+                </ImageView>
+
+                <Label styleClass="login-register-form-title" text="Cambiar contraseña"/>
+                <Label styleClass="login-register-form-subtitle" text="Actualiza tu contraseña"/>
+            </VBox>
+
+            <VBox spacing="20" maxWidth="320.0" styleClass="login-register-form-container">
 
                 <VBox fx:id="olvideBox" spacing="15">
-                    <VBox spacing="8">
-                        <Label text="Email registrado" styleClass="field-label" />
-                        <TextField fx:id="email" promptText="Ingrese el email registrado" styleClass="password-field" />
+                    <VBox spacing="8" styleClass="login-register-field-group">
+                        <Label text="Email registrado" styleClass="login-register-field-label" />
+                        <TextField fx:id="email" promptText="Ingrese el email registrado" styleClass="login-register-input-field" />
                     </VBox>
 
-                    <VBox spacing="8">
-                        <Label text="Nueva contraseña" styleClass="field-label" />
-                        <PasswordField fx:id="nuevaPassword" promptText="Nueva contraseña" styleClass="password-field" />
+                    <VBox spacing="8" styleClass="login-register-field-group">
+                        <Label text="Nueva contraseña" styleClass="login-register-field-label" />
+                        <PasswordField fx:id="nuevaPassword" promptText="Nueva contraseña" styleClass="login-register-input-field" />
                     </VBox>
 
-                    <VBox spacing="8">
-                        <Label text="Repetir contraseña" styleClass="field-label" />
-                        <PasswordField fx:id="confirmarPassword" promptText="Repetir contraseña" styleClass="password-field" />
+                    <VBox spacing="8" styleClass="login-register-field-group">
+                        <Label text="Repetir contraseña" styleClass="login-register-field-label" />
+                        <PasswordField fx:id="confirmarPassword" promptText="Repetir contraseña" styleClass="login-register-input-field" />
                     </VBox>
 
                     <Button fx:id="btnOlvidePassword"
                             text="Generar nueva contraseña"
-                            styleClass="primary-button"
+                            styleClass="login-register-primary-button"
                             prefHeight="45.0"
                             maxWidth="Infinity"
-                            onAction="#olvidePassword" />
+                            onAction="#olvidePassword">
+                        <VBox.margin>
+                            <Insets top="10.0"/>
+                        </VBox.margin>
+                    </Button>
                 </VBox>
 
                 <VBox fx:id="cambiarBox" spacing="15">
-                    <VBox spacing="8">
-                        <Label text="Contraseña actual" styleClass="field-label" />
-                        <PasswordField fx:id="oldPassword" promptText="Contraseña actual" styleClass="password-field" />
+                    <VBox spacing="8" styleClass="login-register-field-group">
+                        <Label text="Contraseña actual" styleClass="login-register-field-label" />
+                        <PasswordField fx:id="oldPassword" promptText="Contraseña actual" styleClass="login-register-input-field" />
                     </VBox>
 
-                    <VBox spacing="8">
-                        <Label text="Nueva contraseña" styleClass="field-label" />
-                        <PasswordField fx:id="newPassword" promptText="Nueva contraseña" styleClass="password-field" />
+                    <VBox spacing="8" styleClass="login-register-field-group">
+                        <Label text="Nueva contraseña" styleClass="login-register-field-label" />
+                        <PasswordField fx:id="newPassword" promptText="Nueva contraseña" styleClass="login-register-input-field" />
                     </VBox>
 
                     <Button fx:id="btnCambiarPassword"
-                            text="Actualizar nueva contraseña"
-                            styleClass="primary-button"
+                            text="Actualizar contraseña"
+                            styleClass="login-register-primary-button"
                             prefHeight="45.0"
                             maxWidth="Infinity"
-                            onAction="#cambiarPassword" />
+                            onAction="#cambiarPassword">
+                        <VBox.margin>
+                            <Insets top="10.0"/>
+                        </VBox.margin>
+                    </Button>
                 </VBox>
 
             </VBox>
-        </VBox>
-    </center>
 
-</BorderPane>
+            <Region VBox.vgrow="ALWAYS"/>
+        </VBox>
+    </HBox>
+
+    <AnchorPane pickOnBounds="false">
+        <Button fx:id="btnVolver" layoutX="10" layoutY="10" onAction="#volver" prefHeight="50.0" prefWidth="100.0"
+                styleClass="login-register-primary-button" text="← Volver"/>
+    </AnchorPane>
+</StackPane>
