--- a/desktop/src/main/resources/org/example/desktop/register-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/register-view.fxml
@@ -1,78 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
 <StackPane stylesheets="@estilos/login-register.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.RegisterController">
 
-   <HBox prefHeight="650.0" prefWidth="700.0">
+   <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+         prefHeight="650.0" prefWidth="700.0"
+         styleClass="login-register-container">
 
-      <VBox alignment="CENTER" prefHeight="500.0" prefWidth="300.0" spacing="20" styleClass="left-panel">
+      <VBox alignment="CENTER" prefHeight="650.0" prefWidth="300.0"
+            styleClass="login-register-left-panel" spacing="20">
          <padding>
-            <Insets bottom="40.0" left="30.0" right="30.0" top="40.0" />
+            <Insets bottom="40.0" left="30.0" right="30.0" top="40.0"/>
          </padding>
 
-         <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@images/siaj-logo.png" />
-            </image>
-         </ImageView>
+         <VBox alignment="CENTER" spacing="15" styleClass="login-register-logo-container">
+            <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true"
+                       styleClass="login-register-logo-image">
+               <image>
+                  <Image url="@images/siaj-logo.png"/>
+               </image>
+            </ImageView>
 
-         <Label alignment="CENTER" styleClass="title-label" text="SIAJ INVENTARIOS" wrapText="true" />
+            <Label alignment="CENTER" styleClass="login-register-brand-title"
+                   text="SIAJ INVENTARIOS" wrapText="true"/>
+            <Label alignment="CENTER" styleClass="login-register-brand-subtitle"
+                   text="Sistema de gestión inteligente" wrapText="true"/>
+         </VBox>
 
-         <VBox alignment="CENTER" spacing="15">
-            <Label alignment="CENTER" styleClass="info-text" text="¿Tienes una cuenta?" wrapText="true" />
-            <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#irALogin" prefHeight="35.0" prefWidth="150.0" styleClass="secondary-button" text="Iniciar Sesión" />
+         <Region VBox.vgrow="ALWAYS"/>
+
+         <VBox alignment="CENTER" spacing="15" styleClass="login-register-register-section">
+            <Label alignment="CENTER" styleClass="login-register-register-text"
+                   text="¿Tienes una cuenta?" wrapText="true"/>
+            <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#irALogin" prefHeight="45.0" prefWidth="180.0"
+                    styleClass="login-register-register-button" text="Iniciar Sesión"/>
          </VBox>
       </VBox>
 
-      <VBox alignment="CENTER" prefHeight="500.0" prefWidth="400.0" spacing="25" styleClass="right-panel">
+      <VBox alignment="CENTER" prefHeight="650.0" prefWidth="400.0"
+            styleClass="login-register-right-panel" spacing="25">
          <padding>
-            <Insets bottom="50.0" left="40.0" right="40.0" top="50.0" />
+            <Insets bottom="50.0" left="40.0" right="40.0" top="50.0"/>
          </padding>
 
-         <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@images/siaj-logo.png" />
-            </image>
-         </ImageView>
+         <VBox alignment="CENTER" spacing="15" styleClass="login-register-form-header">
+            <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"
+                       styleClass="login-register-form-logo">
+               <image>
+                  <Image url="@images/siaj-logo.png"/>
+               </image>
+            </ImageView>
 
-         <Label styleClass="form-title" text="Registro Usuario" />
+            <Label styleClass="login-register-form-title" text="Registro Usuario"/>
+            <Label styleClass="login-register-form-subtitle" text="Crea tu cuenta"/>
+         </VBox>
 
-         <VBox maxWidth="320.0" spacing="20">
-
-            <VBox spacing="8">
-               <Label styleClass="field-label" text="Nombre" />
-               <TextField fx:id="nombre" promptText="Ingresa tu nombre" styleClass="text-field" />
+         <VBox spacing="20" maxWidth="320.0" styleClass="login-register-form-container">
+            <VBox spacing="8" styleClass="login-register-field-group">
+               <Label styleClass="login-register-field-label" text="Nombre"/>
+               <TextField fx:id="nombre" promptText="Ingresa tu nombre"
+                          styleClass="login-register-input-field"/>
             </VBox>
 
-            <VBox spacing="8">
-               <Label styleClass="field-label" text="Apellido" />
-               <TextField fx:id="apellido" promptText="Ingresa tu apellido" styleClass="text-field" />
+            <VBox spacing="8" styleClass="login-register-field-group">
+               <Label styleClass="login-register-field-label" text="Apellido"/>
+               <TextField fx:id="apellido" promptText="Ingresa tu apellido"
+                          styleClass="login-register-input-field"/>
             </VBox>
 
-            <VBox spacing="8">
-               <Label styleClass="field-label" text="Correo Electrónico" />
-               <TextField fx:id="email" promptText="Ingresa tu email" styleClass="text-field" />
+            <VBox spacing="8" styleClass="login-register-field-group">
+               <Label styleClass="login-register-field-label" text="Correo Electrónico"/>
+               <TextField fx:id="email" promptText="Ingresa tu email"
+                          styleClass="login-register-input-field"/>
             </VBox>
 
-            <VBox spacing="8">
-               <Label styleClass="field-label" text="Contraseña" />
-               <PasswordField fx:id="password" promptText="Ingresa tu contraseña" styleClass="password-field" />
+            <VBox spacing="8" styleClass="login-register-field-group">
+               <Label styleClass="login-register-field-label" text="Contraseña"/>
+               <PasswordField fx:id="password" promptText="Ingresa tu contraseña"
+                              styleClass="login-register-input-field"/>
             </VBox>
 
-            <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#registrarse" prefHeight="45.0" styleClass="primary-button" text="Registrar">
+            <Button mnemonicParsing="false" onAction="#registrarse" prefHeight="45.0" maxWidth="Infinity"
+                    styleClass="login-register-primary-button" text="Registrar">
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets top="10.0"/>
                </VBox.margin>
             </Button>
          </VBox>
+
+         <Region VBox.vgrow="ALWAYS"/>
       </VBox>
    </HBox>
 
    <AnchorPane pickOnBounds="false">
-      <Button fx:id="btnVolver" layoutX="10" layoutY="10" onAction="#volverAtras" prefHeight="50.0" prefWidth="100.0" styleClass="primary-button" text="Volver"/>
+      <Button fx:id="btnVolver" layoutX="10" layoutY="10" onAction="#volverAtras" prefHeight="50.0" prefWidth="100.0"
+              styleClass="login-register-primary-button" text="Volver"/>
    </AnchorPane>
 </StackPane>
