--- a/desktop/src/main/resources/org/example/desktop/producto-detalle-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/producto-detalle-view.fxml
@@ -8,9 +8,7 @@
 <BorderPane prefHeight="620.0" prefWidth="901.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.ProductoDetalleController">
 
     <!-- Sidebar izquierdo: lo dejamos tal cual -->
-    <left>
-        <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
-    </left>
+
 
     <!-- Estilos -->
     <stylesheets>
@@ -51,18 +49,23 @@
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
 
-                <SplitMenuButton fx:id="menuCategorias" layoutX="330.0" layoutY="268.0" prefHeight="30.0" prefWidth="230.0" text="Categorias" />
-                <Label layoutX="210.0" layoutY="273.0" text="Categorias" textFill="WHITE">
+                <TextField fx:id="txtPrecioCosto" layoutX="330.0" layoutY="268.0" prefHeight="38.0" prefWidth="230.0" promptText="Precio costo" />
+                <Label layoutX="210.0" layoutY="275.0" text="Precio Costo" textFill="WHITE">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
 
-                <SplitMenuButton fx:id="menuEstado" layoutX="330.0" layoutY="309.0" prefHeight="30.0" prefWidth="230.0" text="Estado" />
-                <Label layoutX="210.0" layoutY="314.0" text="Estado" textFill="WHITE">
+                <SplitMenuButton fx:id="menuCategorias" layoutX="330.0" layoutY="315.0" prefHeight="30.0" prefWidth="230.0" text="Categorias" />
+                <Label layoutX="210.0" layoutY="315.0" text="Categorias" textFill="WHITE">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
 
-                <SplitMenuButton fx:id="menuProveedor" layoutX="330.0" layoutY="350.0" prefHeight="30.0" prefWidth="230.0" text="Proveedor" />
-                <Label layoutX="210.0" layoutY="360.0" text="Proveedor" textFill="WHITE">
+                <SplitMenuButton fx:id="menuEstado" layoutX="330.0" layoutY="354.0" prefHeight="30.0" prefWidth="230.0" text="Estado" />
+                <Label layoutX="210.0" layoutY="354.0" text="Estado" textFill="WHITE">
+                    <font><Font name="System Bold" size="12.0" /></font>
+                </Label>
+
+                <SplitMenuButton fx:id="menuProveedor" layoutX="330.0" layoutY="395.0" prefHeight="30.0" prefWidth="230.0" text="Proveedor" />
+                <Label layoutX="210.0" layoutY="395.0" text="Proveedor" textFill="WHITE">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
 
