--- a/desktop/src/main/resources/org/example/desktop/menu-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/menu-view.fxml
@@ -5,10 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="900.0" prefWidth="1600.0" styleClass="menuprincipal-container"
-            xmlns="http://javafx.com/javafx/17.0.12"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.desktop.controller.MenuController">
+<BorderPane prefHeight="900.0" prefWidth="1600.0" styleClass="menuprincipal-container" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.MenuController">
 
     <left>
         <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
@@ -22,7 +19,7 @@
         <AnchorPane prefHeight="900.0" prefWidth="1400.0" styleClass="content-pane" BorderPane.alignment="CENTER">
             <children>
 
-                <HBox layoutX="20" layoutY="20" prefWidth="1360" alignment="CENTER_LEFT" spacing="20" style="-fx-padding: 0 100 0 100;">
+                <HBox alignment="CENTER_LEFT" layoutX="20" layoutY="20" prefWidth="1360" spacing="20" style="-fx-padding: 0 100 0 100;">
                     <HBox fx:id="welcomeBox" alignment="CENTER_LEFT" spacing="10">
                         <ImageView fitHeight="40" fitWidth="40" pickOnBounds="true" preserveRatio="true">
                             <Image url="@images/ion--home.png" />
@@ -35,7 +32,7 @@
 
                     <Pane HBox.hgrow="ALWAYS" />
 
-                    <Button fx:id="btnPerfilUsuario" styleClass="menuprincipal-perfil-button" onAction="#irPerfilUsuario">
+                    <Button fx:id="btnPerfilUsuario" onAction="#irPerfilUsuario" styleClass="menuprincipal-perfil-button">
                         <graphic>
                             <ImageView fitHeight="35" fitWidth="35" pickOnBounds="true" preserveRatio="true">
                                 <Image url="@images/usuario.png" />
@@ -45,9 +42,7 @@
                 </HBox>
 
 
-                <Button fx:id="bntPuntoVenta" layoutX="158.0" layoutY="203.0" mnemonicParsing="false"
-                        onAction="#irPuntoDeVenta" prefHeight="200.0" prefWidth="200.0"
-                        styleClass="menuprincipal-button, punto-venta">
+                <Button fx:id="bntPuntoVenta" layoutX="158.0" layoutY="203.0" mnemonicParsing="false" onAction="#irPuntoDeVenta" prefHeight="200.0" prefWidth="200.0" styleClass="menuprincipal-button, punto-venta">
                     <graphic>
                         <VBox alignment="CENTER" spacing="10">
                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -58,9 +53,7 @@
                     </graphic>
                 </Button>
 
-                <Button fx:id="btnInventario" layoutX="372.0" layoutY="203.0" mnemonicParsing="false"
-                        onAction="#irPuntoDeVenta" prefHeight="200.0" prefWidth="200.0"
-                        styleClass="menuprincipal-button, inventario">
+                <Button fx:id="btnInventario" layoutX="372.0" layoutY="203.0" mnemonicParsing="false" onAction="#irPuntoDeVenta" prefHeight="200.0" prefWidth="200.0" styleClass="menuprincipal-button, inventario">
                     <graphic>
                         <VBox alignment="CENTER" spacing="10">
                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -71,9 +64,7 @@
                     </graphic>
                 </Button>
 
-                <Button fx:id="btnProveedores" layoutX="587.0" layoutY="203.0" mnemonicParsing="false"
-                        onAction="#irProveedores" prefHeight="200.0" prefWidth="200.0"
-                        styleClass="menuprincipal-button, proveedores">
+                <Button fx:id="btnProveedores" layoutX="587.0" layoutY="203.0" mnemonicParsing="false" onAction="#irProveedores" prefHeight="200.0" prefWidth="200.0" styleClass="menuprincipal-button, proveedores">
                     <graphic>
                         <VBox alignment="CENTER" spacing="10">
                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -84,9 +75,7 @@
                     </graphic>
                 </Button>
 
-                <Button fx:id="btnGraficos" layoutX="801.0" layoutY="203.0" mnemonicParsing="false"
-                        onAction="#irInventario" prefHeight="200.0" prefWidth="200.0"
-                        styleClass="menuprincipal-button, productos">
+                <Button fx:id="btnGraficos" layoutX="801.0" layoutY="203.0" mnemonicParsing="false" onAction="#irInventario" prefHeight="200.0" prefWidth="200.0" styleClass="menuprincipal-button, productos">
                     <graphic>
                         <VBox alignment="CENTER" spacing="10">
                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -97,9 +86,7 @@
                     </graphic>
                 </Button>
 
-                <Button fx:id="btnGraficos1" layoutX="1015.0" layoutY="203.0" mnemonicParsing="false"
-                        onAction="#irReportes" prefHeight="200.0" prefWidth="200.0"
-                        styleClass="menuprincipal-button, productos">
+                <Button fx:id="btnGraficos1" layoutX="1015.0" layoutY="203.0" mnemonicParsing="false" onAction="#irReportes" prefHeight="200.0" prefWidth="200.0" styleClass="menuprincipal-button, productos">
                     <graphic>
                         <VBox alignment="CENTER" spacing="10">
                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
@@ -131,7 +118,7 @@
                 </VBox>
 
                 <VBox layoutX="700.0" layoutY="450.0" prefHeight="147.0" prefWidth="600.0" styleClass="menuprincipal-info-section">
-                    <Label styleClass="menuprincipal-section-header" text="Últimos movimientos" />
+                    <Label styleClass="menuprincipal-section-header" text="Últimos movimientos (VENTAS)" />
                     <VBox spacing="10" styleClass="menuprincipal-info-content">
                         <Label styleClass="menuprincipal-empty-message" text="No hay movimientos recientes" />
                     </VBox>
