--- a/desktop/src/main/resources/org/example/desktop/proveedor-detalle-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/proveedor-detalle-view.fxml
@@ -7,11 +7,6 @@
 
 <BorderPane prefHeight="620.0" prefWidth="901.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.ProveedorDetalleController">
 
-    <!-- Sidebar izquierdo: lo dejamos tal cual -->
-    <left>
-        <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
-    </left>
-
     <!-- Estilos -->
     <stylesheets>
         <URL value="@estilos/estilos-globales.css" />
@@ -27,7 +22,7 @@
                 <Button fx:id="modificar" layoutX="349.0" layoutY="469.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Modificar" />
 
                 <!-- Botón: Guardar -->
-                <Button fx:id="guardar" layoutX="471.0" layoutY="469.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Guardar" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" />
+                <Button fx:id="guardar" layoutX="471.0" layoutY="469.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="Guardar" />
 
 
 
@@ -52,10 +47,16 @@
                 </Label>
 
 
-                <SplitMenuButton fx:id="menuEstado" layoutX="330.0" layoutY="309.0" prefHeight="30.0" prefWidth="230.0" text="Estado" />
-                <Label layoutX="210.0" layoutY="314.0" text="Estado" textFill="WHITE">
+                <SplitMenuButton fx:id="menuEstado" layoutX="330.0" layoutY="324.0" prefHeight="30.0" prefWidth="230.0" text="Estado" />
+                <Label layoutX="210.0" layoutY="329.0" text="Estado" textFill="WHITE">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
+            <TextField fx:id="txtCUIT" layoutX="330.0" layoutY="270.0" prefHeight="38.0" prefWidth="230.0" promptText="CUIT" />
+            <Label layoutX="210.0" layoutY="279.0" text="CUIT" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
 
 
             </children>
